--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>triprecord</title>
+    <title>Mand Mobile</title>
+    <script>
+      // (function(window, document) {
+      //   function resize() {
+      //     var ww = window.innerWidth
+      //     if (ww > window.screen.width) {
+      //       window.requestAnimationFrame(resize)
+      //     } else {
+      //       if (ww > 750) {
+      //         ww = 750
+      //       }
+      //       document.documentElement.style.fontSize = ww * 100 / 750 + 'px'
+      //     }
+      //   }
+
+      //   resize();
+
+      //   window.addEventListener('resize', resize);
+      //   window.addEventListener('pageshow', function (e) {
+      //     if (e.presisted) {
+      //       resize();
+      //     }
+      //   });
+      // })(window, document);
+    </script>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but triprecord doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
