--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Mand Mobile</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=no"> 
+    <title>咔咔出行</title>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.14&key=6ea135101fd2d6f562da4c3becc2e1b9	"></script> 
+    <script type="text/javascript" src="http://webapi.amap.com/ui/1.0/main.js"></script> 
     <script>
       // (function(window, document) {
       //   function resize() {
