首页构建完成

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <title>咔咔出行</title>
     <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.14&key=6ea135101fd2d6f562da4c3becc2e1b9	"></script> 
     <script type="text/javascript" src="http://webapi.amap.com/ui/1.0/main.js"></script> 
+    <!-- <link rel="stylesheet" href="https://a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css"/> -->
+    <!-- <script src="//webapi.amap.com/ui/1.0/main-async.js"></script> -->
+
     <script>
       // (function(window, document) {
       //   function resize() {
